--- a/index.html
+++ b/index.html
@@ -206,49 +206,42 @@
 			</div>
 		</section>
 
-		<!-- <section class="system-req">
-			<div class="system-req-title container">
-				<div class="row">
-					<div class="col">
-						<h1>System Requirements</h1>
-						<p>Can my computer run this game?</p>
-					</div>
-				</div>
-			</div>
+		<section class="system-req">
 			<div class="system-req-cont container">
-				<div class="row">
-					<div
-						class="col-6 col-sm-3 border rounded-top rounded-start text-center"
-					>
-						<h4 class="system-req-h4">OS:</h4>
-						<p>Windows 7 64-bit only</p>
-						<p>(No OSX support at this time)</p>
+				<h1>System Requriements</h1>
+				<h6>Can my computer run this game?</h6>
+				<div class="d-flex m-0 p-0">
+					<div class="p-2 border rounded-start">
+						<h4 class="system-req-cont-h4-1">OS:</h4>
+						<p>Windows 7 64-bit only <br />(No OSX support at this time)</p>
 					</div>
-					<div
-						class="col-6 col-sm-3 border rounded-top rounded-end text-center"
-					>
-						<h4 class="system-req-h4">Processor:</h4>
+					<div class="p-2 border rounded-end">
+						<h4 class="system-req-cont-h4-2">Processor:</h4>
 						<p>Intel Core 2 Duo @ 2.4 GHZ or</p>
 						<p>AMD Athlon X2 @ 2.8 GHZ</p>
 					</div>
-					<div class="w-100"></div>
-					<div class="col-6 col-sm-3 border rounded-start text-center">
-						<h4 class="system-req-h4">Memory:</h4>
+				</div>
+				<div class="d-flex m-0 p-0">
+					<div class="p-2 border rounded-start">
+						<h4 class="system-req-cont-h4-3">Memory:</h4>
 						<p>4GB RAM</p>
 					</div>
-					<div class="col-6 col-sm-3 border rounded-end text-center">
-						<h4 class="system-req-h4">Storage:</h4>
+					<div class="p-2 border rounded-end">
+						<h4 class="system-req-cont-h4-4">Storage:</h4>
 						<p>8GB available space</p>
 					</div>
-					<div class="w-100"></div>
-					<div class="col-12 col-sm-4 col-sm-6 border rounded">
-						<h4 class="system-req-h4">Graphics:</h4>
-						<p>NVIDIA GeForce GTX 660 2GB or</p>
-						<p>AMD Radeon HD 7850 2GB DirectX 11 (Shader Model 5)</p>
+				</div>
+				<div class="d-flex m-0 p-0">
+					<div class="p-2 border rounded">
+						<h4 class="system-req-cont-h4-5">Graphics:</h4>
+						<p>
+							NVIDIA GeForce GTX 660 2GB or <br />AMD Radeon HD 7850 2GB DirectX
+							11 (Shader Model 5)
+						</p>
 					</div>
 				</div>
 			</div>
-		</section> -->
+		</section>
 
 		<section class="topscores">
 			<div class="container">
