--- a/index.html
+++ b/index.html
@@ -42,21 +42,43 @@
 									>
 								</li>
 								<li class="nav-item dropdown">
-									<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-									  Work
+									<a
+										class="nav-link dropdown-toggle"
+										href="#"
+										id="navbarDropdown"
+										role="button"
+										data-bs-toggle="dropdown"
+										aria-expanded="false"
+									>
+										Work
 									</a>
 									<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-									  <li><a class="dropdown-item" href="#games">The Games</a></li>
-									  <li><a class="dropdown-item" href="#features">Features</a></li>
-									  <li><a class="dropdown-item" href="#system-req">System Requirements</a></li>
-									  <li><a class="dropdown-item" href="#review">User Review</a></li>
+										<li>
+											<a class="dropdown-item" href="#games">The Games</a>
+										</li>
+										<li>
+											<a class="dropdown-item" href="#features">Features</a>
+										</li>
+										<li>
+											<a class="dropdown-item" href="#system-req"
+												>System Requirements</a
+											>
+										</li>
+										<li>
+											<a class="dropdown-item" href="#review">User Review</a>
+										</li>
 									</ul>
-								  </li>
+								</li>
 								<li class="nav-item">
 									<a class="nav-link" href="#contact">Contact</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="https://www.instagram.com/faridwjdi/" target="_blank">About Me</a>
+									<a
+										class="nav-link"
+										href="https://www.instagram.com/faridwjdi/"
+										target="_blank"
+										>About Me</a
+									>
 								</li>
 							</ul>
 							<form class="d-flex">
@@ -270,7 +292,9 @@
 								<div class="col-md-8">
 									<div class="card-body">
 										<h5 class="card-title">Jada Griffin</h5>
-										<p class="card-text">"The next big thing in the world of survival games."</p>
+										<p class="card-text">
+											"The next big thing in the world of survival games."
+										</p>
 										<p class="card-text">
 											<small class="text-muted">Last updated 3 mins ago</small>
 										</p>
@@ -312,7 +336,9 @@
 								<div class="col-md-8">
 									<div class="card-body">
 										<h5 class="card-title">Metacritic</h5>
-										<p class="card-text">"One of my gaming highlights of the year."</p>
+										<p class="card-text">
+											"One of my gaming highlights of the year."
+										</p>
 										<p class="card-text">
 											<small class="text-muted"
 												>Last updated 10 hours ago</small
@@ -349,7 +375,10 @@
 						<div class="info">
 							<div class="address">
 								<h4>Location:</h4>
-								<p>Jl. Teuku Umar No.17, RT.1/RW.1, Gondangdia, Kec. Menteng, Kota Jakarta Pusat, Daerah Khusus Ibukota Jakarta 10350</p>
+								<p>
+									Jl. Teuku Umar No.17, RT.1/RW.1, Gondangdia, Kec. Menteng,
+									Kota Jakarta Pusat, Daerah Khusus Ibukota Jakarta 10350
+								</p>
 							</div>
 
 							<div class="email">
@@ -428,6 +457,9 @@
 			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
 			crossorigin="anonymous"
 		></script>
-		<script src="https://kit.fontawesome.com/fe6f680323.js" crossorigin="anonymous"></script>
+		<script
+			src="https://kit.fontawesome.com/fe6f680323.js"
+			crossorigin="anonymous"
+		></script>
 	</body>
 </html>
