add missing href

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="homepage-navbar">
 				<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
 					<div class="container-fluid">
-						<a class="navbar-brand" href="#"
+						<a class="navbar-brand" href="#homepage"
 							><img src="./assets/icons8-anubis-48.png" alt="logo"
 						/></a>
 						<button
@@ -107,10 +107,10 @@
 			<div class="homepage-container container">
 				<h1 class="hp-cont-h1">PLAY TRADITIONAL GAME</h1>
 				<h6 class="hp-cont-h6">Experience New Traditional Gameplay</h6>
-				<a class="hp-cont-btn-a" href="#">
+				<a class="hp-cont-btn-a" href="#games">
 					<button type="button" class="btn btn-warning">PLAY NOW</button>
 				</a>
-				<a class="hp-cont-btm-a" href="#"
+				<a class="hp-cont-btm-a" href="#features"
 					>THE STORY
 					<img
 						class="hp-cont-btm-img"
