update game suit

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			<div class="homepage-container container">
 				<h1 class="hp-cont-h1">PLAY TRADITIONAL GAME</h1>
 				<h6 class="hp-cont-h6">Experience New Traditional Gameplay</h6>
-				<a class="hp-cont-btn-a" href="#games">
+				<a class="hp-cont-btn-a" href="./game-suit.html">
 					<button type="button" class="btn btn-warning">PLAY NOW</button>
 				</a>
 				<a class="hp-cont-btm-a" href="#features"
